updated arduino code with include of buzzer and bridge code for more fine grained logging

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 documentazione/
 
+Python/bridge_prototype/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
+
 config_firebase.txt
+
+firebase_structure_create.py
