changed folder structure, correct base functionality of code (like struct of message)

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
+
+Python/bridge_prototype/
+Python/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
 documentazione/
-
-Python/bridge_prototype/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
-
-config_firebase.txt
-
-firebase_structure_create.py
