--- a/App/baris_app/pubspec.yaml
+++ b/App/baris_app/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   firebase_auth: ^5.3.4
   cloud_firestore: ^5.5.1
   provider: ^6.1.2
+  firebase_messaging: ^15.1.6
 
 
   # The following adds the Cupertino Icons font to your application.
