--- a/App/baris_app/pubspec.yaml
+++ b/App/baris_app/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cloud_firestore: ^5.5.1
   provider: ^6.1.2
   firebase_messaging: ^15.1.6
+  geolocator: ^13.0.2
 
 
   # The following adds the Cupertino Icons font to your application.
