Added Readme, updated gitignore and added a part of analysis with a jupyter notebook

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Python/bridge_prototype/
 Python/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
+Python/Data Analysis/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
 Python/__pycache__/
 documentazione/
