changed folder name and structure. Python to Bridge and Data Analysis moved on root folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Python/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
-Python/Data Analysis/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
-Python/__pycache__/
+Bridge/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
+Data Analysis/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
+Bridge/__pycache__/
 documentazione/
