bug fixing, translating comment in english, removing of some files (& revoked keys), added business presentazion in Italian

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-Bridge/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
-Data Analysis/baris-iot-vito-firebase-adminsdk-baww0-f6eece4154.json
+Bridge/*.json
+Data Analysis/*.json
 Bridge/__pycache__/
 documentazione/
